--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -21,7 +21,8 @@
   .theme-dark .header-wrapper .right-block .notify-dropdown .notify-btn, .theme-dark .sec-title-block .download-excel-btn,
   .theme-dark .filter-dropdown-group .filter-dropdown-menu, .theme-dark .filter-dropdown-menu .filter-form-content .custom-inp,
   .theme-dark .header-wrapper .right-block .my-acc-dropdown .dropdown-menu, .theme-dark .conect-wallet .walles-otr .wallet-btn,
-  .theme-dark .change-pass-modal .modal-dialog .modal-content, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu
+  .theme-dark .change-pass-modal .modal-dialog .modal-content, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu,
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn, .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu
    {
     background-color: #000; }
   .theme-dark .header-wrapper .info-block, .theme-dark .header-wrapper .header-title-block .live-active, .theme-dark .header-wrapper .wallet-btn,
@@ -48,7 +49,8 @@
   .theme-dark .change-pass-modal .modal-dialog .modal-header .heading-top, .theme-dark .change-pass-modal .modal-dialog .modal-body .form-group .input-group label,
   .theme-dark .change-pass-modal .modal-dialog .modal-body .form-group .input-group .form-control,
   .theme-dark .change-pass-modal .modal-dialog .modal-header .heading-top h5, .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .input-group .form-control,
-  .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .notify-title
+  .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .notify-title,
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn, .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item
    {
     color: #fff !important; }
   .theme-dark .header-wrapper .header-title-block .live-active, .theme-dark .header-wrapper .right-block .buy-btn,
@@ -56,7 +58,8 @@
   .theme-dark .sec-title-block .download-excel-btn {
     border-color: #4E4E4E; }
   .theme-dark .header-wrapper .right-block .my-acc-dropdown .my-acc-btn, .theme-dark .portfolio-sec .portfolio-card,
-  .theme-dark .header-wrapper .right-block .notify-dropdown .notify-btn, .theme-dark .header-wrapper .right-block .buy-pros-block .buy-pros-btn {
+  .theme-dark .header-wrapper .right-block .notify-dropdown .notify-btn, .theme-dark .header-wrapper .right-block .buy-pros-block .buy-pros-btn,
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
     border: solid 1px #4E4E4E; }
   .theme-dark .header-wrapper .wallet-btn, .theme-dark .card-sec .h-card-block .join-btn {
     background-color: #2966FF; }
@@ -75,7 +78,8 @@
   .theme-dark .change-pass-modal .modal-dialog .modal-body .form-group .input-group img, .theme-dark .change-pass-modal .modal-dialog .modal-header .close-modal img,
   .theme-dark .login-wrapper .login-left-block .form-group .input-group .icon-pass img, .theme-dark .login-wrapper .login-left-block .form-group .input-group img,
   .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .input-group .fgt-mail-icon,
-  .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn img {
+  .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn img,
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .cart-mob {
     filter: grayscale(1) brightness(4); }
   .theme-dark .react-loading-skeleton {
     --base-color: #262525 !important;
@@ -512,5 +516,19 @@
         background-color: #1B2439 !important; }
       .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item .det p, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item .det .time {
         color: #fff; }
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu {
+    border: solid 1px #484848; }
+    .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item:hover {
+      background-color: #131313; }
+  .theme-dark .logout-modal .btn-block .btn-black.btn-border {
+    border-color: #FFF !important;
+    background-color: #000;
+    color: #fff; }
+  .theme-dark .custom-modal .success-btn-block .btn-border {
+    border-color: #FFF !important;
+    background-color: #000;
+    color: #fff; }
+    .theme-dark .custom-modal .success-btn-block .btn-border img {
+      filter: grayscale(1) brightness(4); }
 
 /*# sourceMappingURL=dark-theme.css.map */
