--- a/css/header.css
+++ b/css/header.css
@@ -222,6 +222,74 @@
             margin-right: 10px; }
           .header-wrapper .right-block .my-acc-dropdown .dropdown-menu .dropdown-item:hover {
             background: #F0F1F9; }
+    .header-wrapper .right-block .buy-pros-dropdown {
+      margin-right: 12px; }
+      .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+        width: 160px;
+        max-height: 40px;
+        padding: 7px 18px 7px 13px;
+        border-radius: 20px;
+        background: #fff;
+        border: none;
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        color: #4D6090;
+        border: solid 1px #4D6090;
+        margin-left: 10px; }
+        @media (max-width: 579px) {
+          .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+            margin-left: 0; } }
+        .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .cart-mob {
+          display: none; }
+          @media (max-width: 1199px) {
+            .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .cart-mob {
+              display: block; } }
+        @media (max-width: 1679px) {
+          .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+            font-size: 13px;
+            width: 150px; } }
+        @media (max-width: 1481px) {
+          .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+            font-size: 13px;
+            width: 145px; } }
+        .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .acc-label {
+          margin-left: 10px;
+          margin-right: 8px; }
+          @media (max-width: 1199px) {
+            .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .acc-label {
+              display: none; } }
+        .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn::after {
+          margin-left: auto;
+          margin-right: 2px;
+          border-top-color: #4D6090;
+          border-top: 0.4em solid;
+          border-right: 0.4em solid transparent;
+          border-left: 0.4em solid transparent; }
+      .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu {
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0px 6px 9px 5px rgba(0, 0, 0, 0.06);
+        border: none;
+        padding: 5px;
+        margin-top: 20px !important;
+        min-width: 190px; }
+        .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item {
+          display: flex;
+          align-items: center;
+          border-radius: 8px;
+          height: 52px;
+          font-size: 13px;
+          color: #2E4276;
+          transition: .3s; }
+          .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item .icon {
+            flex-grow: 0;
+            margin-right: 10px;
+            width: 22px; }
+            .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item .icon img {
+              max-width: 100%; }
+          .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item:hover {
+            background: #F0F1F9; }
   .header-wrapper .info-block {
     color: #4D6090;
     margin-right: 40px; }
@@ -365,6 +433,9 @@
   .filter-wrapper {
     padding: 13px 20px; } }
 @media (max-width: 1481px) {
+  .header-wrapper .right-block .buy-pros-dropdown {
+    margin-right: 8px; }
+
   .header-wrapper .right-block .buy-pros-block .pros-label {
     font-size: 0.813rem;
     padding-right: 5px; }
@@ -422,6 +493,16 @@
   .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-label {
     display: none; } }
 @media (max-width: 1199px) {
+  .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn::after {
+    display: none; }
+
+  .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    align-items: center;
+    justify-content: center; }
+
   .header-wrapper .right-block .buy-pros-block .pros-label {
     display: none; }
 
@@ -461,6 +542,12 @@
     flex: 1 1 auto;
     padding-right: 15px; } }
 @media (max-width: 1100px) {
+  .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
+    width: 36px;
+    height: 36px; }
+    .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn img {
+      max-width: 15px; }
+
   .header-wrapper .right-block .buy-pros-block .buy-pros-btn {
     height: 36px;
     width: 36px; }
@@ -471,6 +558,9 @@
     width: 36px;
     height: 36px; } }
 @media (max-width: 991px) {
+  .header-wrapper .right-block .buy-pros-dropdown {
+    margin-right: 0; }
+
   .header-wrapper .right-block .buy-pros-block {
     padding-right: 0; }
 
