--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -314,6 +314,7 @@
         display: flex;
         padding-left: 0;
         padding-right: 0;
+        flex-wrap: wrap;
         
         @media(max-width:1350px)
         {
@@ -363,7 +364,7 @@
                     display: flex;
                     align-items: center;
                     word-break: break-word;
-                    text-transform: uppercase;
+                    text-transform: capitalize;
                 }
                 p.txt-content
                 {
