--- a/css/staking.css
+++ b/css/staking.css
@@ -246,12 +246,15 @@
       .card-section-outer .top-block .heading-txt {
         margin-bottom: 20px; } }
     .card-section-outer .top-block .heading-txt img {
-      height: 90px; }
+      max-height: 90px; }
       @media (max-width: 991px) {
         .card-section-outer .top-block .heading-txt img {
-          height: 75px; } }
+          max-height: 75px; } }
     .card-section-outer .top-block .heading-txt .desc-content {
       padding-top: 10px; }
+      @media (max-width: 1679px) {
+        .card-section-outer .top-block .heading-txt .desc-content {
+          padding-top: 5px; } }
       .card-section-outer .top-block .heading-txt .desc-content h2 {
         display: flex;
         align-items: center;
@@ -364,7 +367,7 @@
       flex: 1 1 auto; }
     .card-section-outer .top-block .progress-bar-section .progress-count {
       flex: 0 0 auto;
-      color: #2966FF;
+      color: #0C15F9;
       font-weight: 600;
       font-size: 15px;
       padding-left: 15px; }
@@ -764,7 +767,13 @@
         margin-bottom: 8px; }
 
 .card-section-outer .top-block .progress-bar-section .progress-bar-block .progress {
-  height: 8px; }
+  height: 16px; }
+  @media (max-width: 1679px) {
+    .card-section-outer .top-block .progress-bar-section .progress-bar-block .progress {
+      height: 14px; } }
+  @media (max-width: 1481px) {
+    .card-section-outer .top-block .progress-bar-section .progress-bar-block .progress {
+      height: 12px; } }
 
 .progress-bar-section {
   display: flex;
