--- a/scss/home.scss
+++ b/scss/home.scss
@@ -83,7 +83,8 @@
         }
         h2{
             // font-size: 22px;
-            font-size: 1.438rem;
+            // font-size: 1.438rem;
+            font-size: 1.375rem;
             margin-bottom: 20px;
             font-weight: 600;
         }
@@ -91,6 +92,7 @@
             color: $input-text-color;
             font-size: 14px;
             font-size: 0.875rem;
+            text-align: justify;
         }
         .join-btn{
             width: 100%;
