--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -852,4 +852,7 @@ $dark-block-2: #2B2C2E;
     .portfolio-sec .portfolio-card .card-table .txt-blue{
         color: #5B8AFF !important;
     }
+    .progress-bar-block .progress {
+        background-color: #383A3D !important;
+    }
 }
