--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -22,6 +22,7 @@
             padding: 35px 40px 25px;
         }
         .graph-title-block{
+            align-items: center;
             margin-bottom: 30px;
             .graph-title{
                 flex: 1 1 auto;
@@ -32,7 +33,7 @@
                     {
                         @media(max-width:1679px)
                         {
-                            height: 34px;
+                            height: 40px;
                         }    
                     }
                 }
@@ -92,8 +93,12 @@
                             padding-left: 45px;
                         }
                         &:last-child{
+                            font-size: 15px;
                             text-align: right;
                             padding-right: 45px;
+                            @media (max-width: 1679px){
+                                font-size: 14px;
+                            }
                         }
                     }
                     .val-txt
