--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -293,7 +293,7 @@
             
 
             .wallet-icon {
-                border: 1px solid #ddd;
+                // border: 1px solid #ddd;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
