--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -291,6 +291,7 @@
                 font-size: 14px;
                 font-weight: 600;
                 padding: 20px 15px;
+                vertical-align: middle;
                 border: none;
                 &:first-child{
                     padding-left: 35px;
